# Batalha_de_Laponia

./: Board.hpp  CMakeLists.txt  CMakePresets.json  Dockerfile  Main.cpp  Troop.cpp  warrior.cpp
src/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  Main.cpp  Regras.txt  Rules.hpp  Tile.cpp  Tile.hpp  Troop.cpp  Troop.hpp
